@@ -1,3 +1,9 @@
+Fri Jun 24 06:56:11 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
+
+          Avoid ambiguity error from Visual C++ 6.0.
+
 Fri Jun 24 11:12:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/ClientRequestInfo.{h,cpp,inl}:
